--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <filter id='noise' x='0%' y='0%' width='100%' height='100%'>
                 <feTurbulence
                     baseFrequency="0.05 0.05"
-                    type="fractalNoise"
+                    type="turbulence"
                     numOctaves="5"
                     seed="0"
                     stitchTiles="stitch"
@@ -19,6 +19,12 @@
             <rect x="0" y="0" width="100%" height="100%" filter="url(#noise)"></rect>
               
         </svg>
+        <hr />
+        Base frequency: <input type="number" value="0.05" id="baseFrequency1" /> * <input type="number" value="0.05" id="baseFrequency2" /><br />
+        Type: <select id="noiseType"><option value="turbulence">Turbulence</option><option value="fractalNoise">Fractal Noise</option></select><br />
+        Octaves: <input type="number" value="5" id="octaves" /><br />
+        Seed: <input type="number" value="0" id="seed" /><br />
+        Tiling: <select id="stitchTiles"><option value="stitch">Stitch</option><option value="noStitch">Don't Stitch</option></select><br />
         <script src="code.js"></script>
     </body>
 </html>
