--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               
         </svg>
         <hr />
-        Base frequency: <input type="number" value="0.05" id="baseFrequency1" /> * <input type="number" value="0.05" id="baseFrequency2" /><br />
+        Base frequency: <input type="number" value="0.05" step="0.001" id="baseFrequency1" /> * <input type="number" value="0.05" step="0.001" id="baseFrequency2" /><br />
         Type: <select id="noiseType"><option value="turbulence">Turbulence</option><option value="fractalNoise">Fractal Noise</option></select><br />
         Octaves: <input type="number" value="5" id="octaves" /><br />
         Seed: <input type="number" value="0" id="seed" /><br />
