Use SVG viewBox

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Fractal Noise</title>
     </head>
     <body>
-        <svg width="1280" height="720">
+        <svg viewBox="0 0 1280 720">
   
             <filter id='noise' x='0%' y='0%' width='100%' height='100%'>
                 <feTurbulence
