Get document dimensions from Photopea

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         Octaves: <input type="number" value="5" id="octaves" /><br />
         Seed: <input type="number" value="0" id="seed" /><br />
         Tiling: <select id="stitchTiles"><option value="stitch">Stitch</option><option value="noStitch">Don't Stitch</option></select><br />
+        <script src="photopea.min.js"></script>
         <script src="code.js"></script>
     </body>
 </html>
