--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Fractal Noise</title>
     </head>
     <body>
-        <svg viewBox="0 0 1280 720">
+        <svg viewBox="0 0 1280 720" xmlns="http://www.w3.org/2000/svg">
   
             <filter id='noise' x='0%' y='0%' width='100%' height='100%'>
                 <feTurbulence
