--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 />
             </filter>
             
+            <rect x="0" y="0" width="100%" height="100%" style="fill: white;"></rect>
             <rect x="0" y="0" width="100%" height="100%" filter="url(#noise)"></rect>
               
         </svg>
