--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Fractal Noise</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <svg viewBox="0 0 1280 720" xmlns="http://www.w3.org/2000/svg">
