--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 />
             </filter>
             
-            <rect x="0" y="0" width="100%" height="100%" style="fill: grey;"></rect>
+            <rect x="0" y="0" width="100%" height="100%" style="fill: black;"></rect>
             <rect x="0" y="0" width="100%" height="100%" filter="url(#noise)"></rect>
               
         </svg>
