--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <rect x="0" y="0" width="100%" height="100%" filter="url(#noise)"></rect>
               
         </svg>
-        <canvas id="outCan"></canvas>
+        <canvas id="outCan" width="1280" height="720"></canvas>
         <hr />
         Base frequency: <input type="number" value="0.05" step="0.001" id="baseFrequency1" /> * <input type="number" value="0.05" step="0.001" id="baseFrequency2" /><br />
         Type: <select id="noiseType"><option value="fractalNoise">Clouds</option><option value="turbulence">Energy</option></select><br />
